# hwfs

./: .gitignore  Cargo.toml  build.bat
assets/: index.css  index.html  index.js
resource/: resource.rc
src/: server.rs
src/assets/: package-lock.json  package.json
src/assets/config/: webpack.base.config.js  webpack.dev.config.js  webpack.prod.config.js
src/assets/public/: index.html
src/assets/ref/duf/: index.js
src/assets/ref/h5ai-0.30/: styles.css
src/assets/src/: main.js
src/assets/src/css/: base.css  index.css
src/assets/src/js/: _uploader.js  i18n.js  uploader.js  utils.js
